--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongodb": "^1.4.19",
     "socket.io": "^1.0.6",
     "stylus": "^0.49.1",
-    "timeago": "~1.5.2"
+    "timeago": "~1.5.2",
+    "mongoose": "^1.3.10"
   },
   "devDependencies": {},
   "scripts": {
