--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "socket.io": "^1.0.6",
     "stylus": "^0.49.1",
     "timeago": "~1.5.2",
-    "mongoose": "^1.3.10"
+    "mongoose": "*"
   },
   "devDependencies": {},
   "scripts": {
